hphp/hack/test/typecheck/switch_local_type_change_after_return.php.exp
File "switch_local_type_change_after_return.php", line 17, characters 14-15:
Invalid return type (Typing[4110])
File "switch_local_type_change_after_return.php", line 12, characters 15-17:
This is an int
File "switch_local_type_change_after_return.php", line 16, characters 12-17:
It is incompatible with a string
